--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -1,25 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="200dp"
-    android:layout_height="150dp"
-    android:background="@android:color/darker_gray"
-    android:orientation="vertical"
-    android:id="@+id/relative_picture">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/relative_picture"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp"
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/image_picture"
+    <com.makeramen.roundedimageview.RoundedImageView
+        android:id="@+id/rounded_picture"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <ImageView
-        android:id="@+id/image_icon_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="10dp"
+        android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/ic_star_black_24dp" />
+        app:riv_border_color="@color/hyshPink"
+        app:riv_border_width="3dp"
+        app:riv_corner_radius="10dp" />
 
 
 </RelativeLayout>
