--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/hyshPink</item>
-        <item name="colorPrimaryDark">@color/hyshPink</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/hyshGray</item>
+        <item name="colorPrimaryDark">@color/hyshGray</item>
+        <item name="colorAccent">@color/hyshGray</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
