--- a/app/src/main/res/layout/dialog_fragment_view_image.xml
+++ b/app/src/main/res/layout/dialog_fragment_view_image.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/transparent">
+    android:background="@android:color/transparent"
+    >
 
 
     <ImageView
@@ -18,7 +19,29 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="30dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_star_black_24dp"
+        android:tint="@android:color/holo_red_dark" />
+
+    <ImageView
+        android:id="@+id/image_next"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_margin="30dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_star_black_24dp"
+        android:tint="@android:color/holo_red_dark" />
+
+    <ImageView
+        android:id="@+id/image_previous"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
         android:layout_margin="30dp"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_star_black_24dp"
