Add functionality that allows user to click in the expanded image and if the user set selected some picture, return the value to the gallery and mark it as favourite.

--- a/app/src/main/res/layout/dialog_fragment_view_image.xml
+++ b/app/src/main/res/layout/dialog_fragment_view_image.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/transparent"
-    >
+    android:background="@android:color/transparent">
 
 
     <ImageView
@@ -25,27 +24,49 @@
         android:src="@drawable/ic_star_black_24dp"
         android:tint="@android:color/holo_red_dark" />
 
-    <ImageView
-        android:id="@+id/image_next"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+    <RelativeLayout
+        android:id="@+id/relative_next"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_margin="30dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/ic_star_black_24dp"
-        android:tint="@android:color/holo_red_dark" />
+        android:layout_marginTop="200dp"
+        android:gravity="top"
+        android:paddingEnd="30dp">
 
-    <ImageView
-        android:id="@+id/image_previous"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_centerVertical="true"
+        <ImageView
+            android:id="@+id/image_next"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_chevron_right_black_24dp"
+            android:tint="@color/hyshPink" />
+
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
+        android:id="@+id/relative_previous"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:layout_margin="30dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/ic_star_black_24dp"
-        android:tint="@android:color/holo_red_dark" />
+        android:layout_centerVertical="true"
+        android:layout_marginTop="200dp"
+        android:gravity="top"
+        android:paddingEnd="30dp">
 
+        <ImageView
+            android:id="@+id/image_previous"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_chevron_left_black_24dp"
+            android:tint="@color/hyshPink" />
+
+
+    </RelativeLayout>
 
 </RelativeLayout>
