Add Tutorial v1 images and modify items in tutorial

--- a/app/src/main/res/drawable/testing_drawable.xml
+++ b/app/src/main/res/drawable/testing_drawable.xml
@@ -5,6 +5,6 @@
     <corners android:bottomRightRadius="75dp" android:topRightRadius="75dp" />
 
     <gradient
-        android:endColor="@color/hyshGray"
+        android:endColor="@android:color/transparent"
         android:startColor="@color/hyshPink" />
 </shape>
