--- a/app/src/main/res/layout/activity_tutorial.xml
+++ b/app/src/main/res/layout/activity_tutorial.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".adapters.TutorialActivity">
+    tools:context=".adapters.TutorialActivity"
+    android:background="@color/hyshGray">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
@@ -18,6 +19,26 @@
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <ImageView
+        android:id="@+id/imageBack"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="30dp"
+        android:src="@drawable/ic_reply_black_24dp"
+        android:tint="@color/hyshPink"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="30dp"
+        android:textColor="@color/hyshPink"
+        android:text="Salir del tutorial" />
+
 
     <me.relex.circleindicator.CircleIndicator
         android:id="@+id/circle_indicator"
