--- a/app/src/main/res/layout/activity_resume_of_selection.xml
+++ b/app/src/main/res/layout/activity_resume_of_selection.xml
@@ -8,6 +8,7 @@
     tools:context=".ResumeOfSelection">
 
     <TextView
+        android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
